# docs/swagger.json
@@ -579,6 +579,186 @@
                 }
             }
         },
+        "/api/comments": {
+            "post": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Create a comment.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Create comment.",
+                "parameters": [
+                    {
+                        "description": "the body to create a comment",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CommentCreateRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebSuccess-response_CommentResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebBadRequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/comments/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Delete a comment.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Delete comment.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Comment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebSuccess-string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebBadRequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebNotFoundError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebInternalServerError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Update a comment.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Update comment.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Comment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "the body to update a comment",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CommentUpdateRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebSuccess-response_CommentResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebBadRequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebNotFoundError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/favourites/{carID}": {
             "post": {
                 "security": [
@@ -621,12 +801,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/web.WebBadRequestError"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/web.WebForbiddenError"
                         }
                     },
                     "500": {
@@ -678,12 +852,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/web.WebBadRequestError"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/web.WebForbiddenError"
                         }
                     },
                     "500": {
@@ -921,6 +1089,53 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/web.WebSuccess-response_ReviewResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebBadRequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebNotFoundError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/reviews/{id}/comment": {
+            "get": {
+                "description": "Find a comment by review id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "Find comment by review id.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Review ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/web.WebSuccess-array_response_CommentResponse"
                         }
                     },
                     "400": {
@@ -1310,6 +1525,35 @@
                 }
             }
         },
+        "request.CommentCreateRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "review_id"
+            ],
+            "properties": {
+                "review_id": {
+                    "type": "integer",
+                    "x-order": "0"
+                },
+                "content": {
+                    "type": "string",
+                    "x-order": "1"
+                }
+            }
+        },
+        "request.CommentUpdateRequest": {
+            "type": "object",
+            "required": [
+                "content"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string",
+                    "x-order": "0"
+                }
+            }
+        },
         "request.LoginRequest": {
             "type": "object",
             "required": [
@@ -1352,7 +1596,7 @@
             "required": [
                 "car_id",
                 "content",
-                "image",
+                "image_url",
                 "title"
             ],
             "properties": {
@@ -1369,7 +1613,7 @@
                     "type": "string",
                     "x-order": "2"
                 },
-                "image": {
+                "image_url": {
                     "type": "string",
                     "x-order": "3"
                 }
@@ -1377,9 +1621,6 @@
         },
         "request.ReviewUpdateRequest": {
             "type": "object",
-            "required": [
-                "image"
-            ],
             "properties": {
                 "title": {
                     "type": "string",
@@ -1389,7 +1630,7 @@
                     "type": "string",
                     "x-order": "1"
                 },
-                "image": {
+                "image_url": {
                     "type": "string",
                     "x-order": "2"
                 }
@@ -1545,6 +1786,39 @@
                 }
             }
         },
+        "response.CommentResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "x-order": "0",
+                    "example": 1
+                },
+                "review_id": {
+                    "type": "integer",
+                    "x-order": "1",
+                    "example": 2
+                },
+                "user_id": {
+                    "type": "integer",
+                    "x-order": "2",
+                    "example": 3
+                },
+                "content": {
+                    "type": "string",
+                    "x-order": "3",
+                    "example": "Lorem ipsum dolor sit amet"
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "2022-01-01T00:00:00Z"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2022-01-01T00:00:00Z"
+                }
+            }
+        },
         "response.FindReviewResponse": {
             "type": "object",
             "properties": {
@@ -1563,7 +1837,7 @@
                     "x-order": "2",
                     "example": "Lorem ipsum dolor sit amet"
                 },
-                "image": {
+                "image_url": {
                     "type": "string",
                     "x-order": "3",
                     "example": "image url"
@@ -1571,7 +1845,7 @@
                 "car": {
                     "allOf": [
                         {
-                            "$ref": "#/definitions/response.CarResponse"
+                            "$ref": "#/definitions/response.ReviewCarResponse"
                         }
                     ],
                     "x-order": "4"
@@ -1631,6 +1905,16 @@
                 }
             }
         },
+        "response.ReviewCarResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "x-order": "0",
+                    "example": 1
+                }
+            }
+        },
         "response.ReviewResponse": {
             "type": "object",
             "properties": {
@@ -1659,7 +1943,7 @@
                     "x-order": "4",
                     "example": "Lorem ipsum dolor sit amet"
                 },
-                "image": {
+                "image_url": {
                     "type": "string",
                     "x-order": "5",
                     "example": "image url"
@@ -1877,6 +2161,28 @@
                 }
             }
         },
+        "web.WebSuccess-array_response_CommentResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "x-order": "0",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string",
+                    "x-order": "1",
+                    "example": "success"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.CommentResponse"
+                    },
+                    "x-order": "2"
+                }
+            }
+        },
         "web.WebSuccess-array_response_FindReviewResponse": {
             "type": "object",
             "properties": {
@@ -1939,6 +2245,29 @@
                     "allOf": [
                         {
                             "$ref": "#/definitions/response.CarResponse"
+                        }
+                    ],
+                    "x-order": "2"
+                }
+            }
+        },
+        "web.WebSuccess-response_CommentResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "x-order": "0",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string",
+                    "x-order": "1",
+                    "example": "success"
+                },
+                "data": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/response.CommentResponse"
                         }
                     ],
                     "x-order": "2"
